src/objects/Cheque__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agresso_Reference__c</fullName>
        <description>this is the number loaded on to the system once a refund cheque has been produced. It is set as an external reference ID in case of updates from Agresso</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the number loaded on to the system once a refund cheque has been produced</inlineHelpText>
        <label>Agresso Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Amount__c</fullName>
        <label>Cheque Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_Banking_Status__c</fullName>
        <inlineHelpText>Status of a sub payment cheque</inlineHelpText>
        <label>Cheque Banking Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Banked</fullName>
                <default>true</default>
                    <label>Banked</label>
                </value>
                <value>
                <fullName>Returned</fullName>
                </value>
                <value>
                <fullName>Issued</fullName>
                </value>
                <value>
                <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cheque_Batch_No__c</fullName>
        <formula>Cheque_Batch__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheque Batch No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Batch__c</fullName>
        <label>Cheque Batch</label>
        <referenceTo>Cheque_Batch__c</referenceTo>
        <relationshipLabel>Cheques</relationshipLabel>
        <relationshipName>Cheques</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cheque_Refund_Reason__c</fullName>
        <inlineHelpText>Reason for a cheque refund being raised</inlineHelpText>
        <label>Cheque Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>14 Day Cancellation</fullName>
                </value>
                <value>
                <fullName>Cancelled Sub</fullName>
                </value>
                <value>
                <fullName>Deceased</fullName>
                </value>
                <value>
                <fullName>DD error</fullName>
                </value>
                <value>
                <fullName>Emigration</fullName>
                </value>
                <value>
                <fullName>Holiday Refund</fullName>
                </value>
                <value>
                <fullName>Serious Illness</fullName>
                </value>
                <value>
                <fullName>Indemnity</fullName>
                </value>
                <value>
                <fullName>Newsagent problem</fullName>
                </value>
                <value>
                <fullName>Marketed price issue</fullName>
                </value>
                <value>
                <fullName>CC Error</fullName>
                </value>
                <value>
                <fullName>Good will</fullName>
                </value>
                <value>
                <fullName>Missing/Lost Vouchers</fullName>
                </value>
                <value>
                <fullName>Poor Eyesight</fullName>
                </value>
                <value>
                <fullName>Review Of Personal Finances</fullName>
                </value>
                <value>
                <fullName>Price Increase</fullName>
                </value>
                <value>
                <fullName>DM Mailing Error</fullName>
                </value>
                <value>
                <fullName>Competitor Offer</fullName>
                </value>
                <value>
                <fullName>Too Much To Read</fullName>
                </value>
                <value>
                <fullName>Extended Holiday</fullName>
                </value>
                <value>
                <fullName>Distribution Problems</fullName>
                </value>
                <value>
                <fullName>Duplicate Paper</fullName>
                </value>
                <value>
                <fullName>Dislikes Paper</fullName>
                </value>
                <value>
                <fullName>Salesforce Error</fullName>
                </value>
                <value>
                <fullName>Occasional Reader</fullName>
                </value>
                <value>
                <fullName>Moved To a Care Home</fullName>
                </value>
                <value>
                <fullName>Voucher Style</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_on_Cheque__c</fullName>
        <label>Name on Cheque</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raised__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to show that a refund cheque has been raised by the finance system</description>
        <label>Raised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Number_on_Cheque__c</fullName>
        <label>Ref Number on Cheque</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cheques</relationshipLabel>
        <relationshipName>Cheques</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Cheques</relationshipLabel>
        <relationshipName>Cheques</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Sub Payment</fullName>
                </value>
                <value>
                <fullName>Anomaly Cheque</fullName>
                </value>
                <value>
                <fullName>Refund</fullName>
                </value>
                <value>
                <fullName>Refund - awaiting approval</fullName>
                </value>
                <value>
                <fullName>Indemnity Cheque</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voucher_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Voucher Activity cheque created for</description>
        <inlineHelpText>Voucher Activity cheque created for</inlineHelpText>
        <label>Voucher Activity</label>
        <referenceTo>Voucher_Adjustment__c</referenceTo>
        <relationshipLabel>Cheques</relationshipLabel>
        <relationshipName>Cheques</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cheque</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Cheque ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cheques</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Cheque Record Type</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Voucher_Refund_Cheque</fullName>
        <active>true</active>
        <description>Voucher Refund Cheque Record Type</description>
        <label>Voucher Refund Cheque</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Banking_status_required</fullName>
        <active>true</active>
        <description>Cheque banking status required for a sub payment cheque</description>
        <errorConditionFormula>ISPICKVAL(  Cheque_Banking_Status__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Cheque_Banking_Status__c</errorDisplayField>
        <errorMessage>Cheque Banking Status is required for a Sub Payment cheque</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventChequeRefundOnSubscription</fullName>
        <active>true</active>
        <description>Validation rule to prevent cheque refunds being allocated to subscriptions with a status of &apos;Offered&apos;, &apos;Declined&apos; or &apos;Withdrawn&apos;.</description>
        <errorConditionFormula>IF( OR($Profile.Name = &quot;TMG System&quot;, $Profile.Name = &quot;TMG Subs Administrator&quot;), false,
AND(
OR(ISPICKVAL( Subscription__r.Subscription_Status__c , &apos;Offered&apos;),
ISPICKVAL( Subscription__r.Subscription_Status__c , &apos;Withdrawn&apos;),
ISPICKVAL( Subscription__r.Subscription_Status__c , &apos;Declined&apos;)
) ,
Or(
ISPICKVAL(Type__c, &apos;Refund&apos;) ,
ISPICKVAL(Type__c, &apos;Refund - awaiting approval&apos;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>A cheque refund cannot be allocated to an Offered Withdrawn or Declined subscription</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Refund_reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
       ISPICKVAL(Type__c , &quot;Refund&quot;),
       ISPICKVAL(Type__c, &quot;Refund - awaiting approval&quot;),
       ISPICKVAL( Type__c, &quot;Indemnity Cheque&quot;)
      ),
ISPICKVAL( Cheque_Refund_Reason__c , &quot;&quot;) )</errorConditionFormula>
        <errorDisplayField>Cheque_Refund_Reason__c</errorDisplayField>
        <errorMessage>Refund reason is required for any cheque refund</errorMessage>
    </validationRules>
</CustomObject>